cmake_minimum_required(VERSION 3.23)
project(contest1)

set(CMAKE_CXX_STANDARD 14)

add_executable(contest1 a.cpp b.cpp c.cpp e.cpp d.cpp f.cpp g.cpp h.cpp i.cpp j.cpp k.cpp l.cpp n.cpp o.cpp p.cpp q.cpp r.cpp sem_a.cpp sem_b.cpp sem_c.cpp sem_d.cpp sem_e.cpp sem_f.cpp s.cpp t.cpp v.cpp m1.cpp x.cpp)
